# MLOps_Transformers

./: .coveragerc  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements_gpu.txt  setup.py
.github/workflows/: style.yml  tests.yml
deployment/start/: requirements.txt
deployment/start/classify/: __init__.py  labels.json  predictonnx.py  shoot.py
docs/: Makefile  conf.py  make.bat
experiments/: experiment-base.yaml  experiment-final.yaml  experiment-full.yaml  experiment-half.yaml  experiment-optuna.yaml  firstest.yaml  hypersearch-large.yaml  hypersearch.yaml
src/: paths.py  train_config.py
src/data/: make_dataset.py  make_dataset_lit_wrapper.py
src/models/: distil_bert_classifier.py  load_model.py  main.py  model_manager.py  train_model.py
src/models/lightning/: check_model.py  experiments.py  model_manager.py  model_wrapper_lit.py  predict_model_lit.py  train_model_lit.py  train_runner.py
src/tests/: test_dummy.py
tests/: test-config.yaml  test_data.py  test_dummy.py  test_model.py
