[tool.poetry]
name = "mlops_transformers"
version = "0.1.0"
description = "MLOps course project 1"
authors = ["Artur Przybysz <s202384@student.dtu.dk, Filip Sawicki s202563@student.dtu.dk, Jonatan Cichawa s200155@student.dtu.dk"]

[tool.poetry.dependencies]
python = "^3.7.1"
matplotlib = "^3.4.2"
poethepoet = "^0.10.0"
torch = "1.8.1"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
